	* Current build 29.
	
2009-31-July  Marco Randazzo <marco.randazzo@iit.it>
	* Fixed GetControlMode message on 2BLL / 4DC.

2009-20-October  Marco Maggiali <marco.maggiali@iit.it>
	* Added MODE_OPENLOOP =0x50. TO BE TESTED 
	* Current build 31.	

2009-13-December  iron <francesco.nori@iit.it>
	* Version 0x0153 now decouples also the duty cycles. 
	* Includes a tentative for fixing a possible delay (4ms)
	on the trasmission of positions in version 0x0153 and 0x0173.
	* Current build 32.	
	
2009-28-December  Marco Maggiali <marco.maggiali@iit.it>
	* Version 0x0157 for joints 2 and 3 of the shoulder for icub V1.1. 
	* Current build 33.

2010-11-January  Francesco Nori <iron@liralab.it>
	* Added "if" conditions: do not update position if abs_encoder fails.
	* Checks timeout on the presence of coupled information. 
	* Current build 34.

2010-11-January  Francesco Nori and Randaz <iron@liralab.it>
	* Stops sending both encoders if one fails (avoid troubles with coupled boards)
	* Current build 35.

2010-20-April  Francesco Nori <iron@liralab.it>
	* Stops controlling (disable PWM) if velocity messages 
	* are not received in 400ms (VELOCITY_TIMEOUT).
	* Current build 36.

2010-29-April  Francesco Nori <iron@liralab.it>
	* _vel_timeout is now passed via CAN
	* Current build 37.

2010-11-May  Francesco Nori <iron@liralab.it>
	* _vel_timeout is now passed via CAN on a separate message
	* Current build 38.	
	
2010-3-June  Marci Randazzo <marco.randazzo@iit.it>
	* Merging firmware version 1.73/1.74 in standard firmware in order to provide MODE_TORQUE control mode to all firmware versions.
	* CAN masks changed. Now all firmware versions can read force data.
	* compute_pwm function changed. All firmware versions can now enter MODE_TORQUE control mode.
	* four force watchdogs are now used to check if force data from board 11/12/13/14 are recevied.
	  boards 11/12 can be virtual (forces calculated by iDyn and transmitted on CAN bus by PC104)  
	* Current build 39.	